test/compile_errors/err_auto_ref_no_safe_mut_ref.w
//! expect-check-fail: `&mut T` is not part of safe With

fn mutate(s: &mut str):
    let _ = s
